--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 {{$NEXT}}
+  - Fix unittests
+  - Extend api
 
 0.015_04  2013-08-05 13:45:31 EDT
-    - more test coverage
+  - more test coverage
 
 0.015_03  2013-07-11 01:04:03 EDT
-    - Update to milla build spec
-    - Add additional requirements to cpanfile
+  - Update to milla build spec
+  - Add additional requirements to cpanfile
